# project-root-patch

./: Cargo.toml  README.md  build.rs
src/: build.rs.template  lib.rs  main.rs
tests/: install_standalone.rs
tests/resources/simple-package/: Cargo.toml
tests/resources/simple-package/src/: main.rs
tests/resources/simple-workspace-package/: Cargo.toml
tests/resources/workspace-package/: Cargo.toml
tests/resources/workspace-package/simple-member/: Cargo.toml
tests/resources/workspace-package/simple-member/src/: main.rs
