[package]
name = "prebindgen-project-root"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Michael Ilyin <milyin@gmail.com>"]
repository = "https://github.com/milyin/prebindgen"
description = "Utility to expose the workspace project root at build time"
readme = "README.md"

[lib]
name = "prebindgen_project_root"
path = "src/lib.rs"

[build-dependencies]
project-root = "0.2"

[package.metadata.docs.rs]
all-features = true
